--- a/app/views/home/aboutus.html.erb
+++ b/app/views/home/aboutus.html.erb
@@ -1,10 +1,5 @@
-<%= render 'layouts/carousel'%>
-
-<div class="row">
-  <div class="span3">
-  	<%= render 'layouts/sidebar'%>
-  </div>
-  <div class="span9">          
-    <p>About Us</p>
-  </div>
-</div>
+<% title "About Us" %>
+<% meta :description => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection",
+        :keywords => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection, Free Quote, Low Price Handmade Embroidery, About Us"
+%>
+<p>About Us</p>
