--- a/app/views/home/howwework.html.erb
+++ b/app/views/home/howwework.html.erb
@@ -1,10 +1,5 @@
-<%= render 'layouts/carousel'%>
-
-<div class="row">
-  <div class="span3">
-  	<%= render 'layouts/sidebar'%>
-  </div>
-  <div class="span9">          
-    <p>How we work</p>
-  </div>
-</div>
+<% title "How to place order" %>
+<% meta :description => "How to place order of Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection",
+        :keywords => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection, Free Quote, Low Price Handmade Embroidery"
+%>
+<p>How we work</p>
