--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -2,7 +2,7 @@
     ================================================== -->
     <div class="navbar-wrapper">
       <!-- Wrap the .navbar in .container to center it within the absolutely positioned parent. -->
-      <div class="container">
+
 
         <div class="navbar navbar-inverse">
           <div class="navbar-inner">
@@ -17,7 +17,7 @@
             <div class="nav-collapse collapse">
               <ul class="nav">
                 <li class="<%= 'active' if params[:action] == 'index' && params[:controller] == 'home' %>"><%= link_to "Home", root_url %></li>                
-                <li class="<%= 'active' if params[:action] == 'samples' %>"><%= link_to "Our Work", samples_url %></li>
+                <li class="<%= 'active' if params[:action] == 'samples' %>"><%= link_to "Our Work", samples_url(@first_id) %></li>
                 <li class="<%= 'active' if params[:action] == 'pricing' %>"><%= link_to "Pricing", pricing_url %></li>
                 <li class="<%= 'active' if params[:action] == 'aboutus' %>"><%= link_to "About Us", aboutus_url %></li>
                 <li class="<%= 'active' if params[:action] == 'contactus' %>"><%= link_to "Contact Us", contactus_url %></li>
@@ -42,6 +42,6 @@
           </div><!-- /.navbar-inner -->
         </div><!-- /.navbar -->
 
-      </div> <!-- /.container -->
+      
     </div><!-- /.navbar-wrapper -->
 
