--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -2,8 +2,8 @@
   <ul class="nav nav-list">
     <li class="nav-header" style="background-color: #171717; color: #999999">Our Work</li>
     <% @products.each do |product| %>
-      <li class="sidenavigation <%= 'active' if params[:id] == product.id.to_s || @first_id == product.id %>">	              
-      	<%= link_to product.title, {:controller => "home", :action => "samples", :id => product.id} %>
+      <li class="<%= 'active' if params[:id] == product.id.to_s %>">	              
+      	<%= link_to product.title, samples_path(product) %>
       </li>
     <% end %>
     
@@ -14,9 +14,17 @@
     <li><a href="#">Link</a></li>
     <li><a href="#">Link</a></li>
     <li><a href="#">Link</a></li>
-    <li class="nav-header" style="background-color: #171717; color: #999999">Sidebar</li>
-    <li><a href="#">Link</a></li>
-    <li><a href="#">Link</a></li>
-    <li><a href="#">Link</a></li>
+    <% if !session[:admin].nil? && session[:admin] == 'true' %>
+	    <li class="nav-header" style="background-color: #171717; color: #999999">Admin Tasks</li>
+	    <li class="<%= 'active' if params[:controller] == 'products' && params[:action] == 'index' %>">	              
+      	<%= link_to "Manage Products", products_path %>
+      </li>
+      <li class="<%= 'active' if params[:controller] == 'product_samples' && params[:action] == 'index' %>">	              
+      	<%= link_to "Manage Product Samples", product_samples_path %>
+      </li>	    
+      <li class="<%= 'active' if params[:controller] == 'quotes' && params[:action] == 'index' %>">	              
+      	<%= link_to "Manage Quotes", quotes_path %>
+      </li>
+	  <% end %>
   </ul>
 </div><!--/.well -->
