--- a/app/views/product_samples/show.html.erb
+++ b/app/views/product_samples/show.html.erb
@@ -1,41 +1,34 @@
-<div class="row">
-	<div class="span12">
+<% title @product_sample.title %>
+<% meta :description => @product_sample.description,
+        :keywords => @product_sample.title
+%>
+<% breadcrumb :sample, @product_sample %>
+<!-- p>
+  <b>Category:</b>
+  <%= @product_sample.product_id %>
+</p -->
 
-		<p id="notice"><%= notice %></p>
-		
-		<p>
-		  <b>Category:</b>
-		  <%= @product_sample.product_id %>
-		</p>
-		
-		<p>
-		  <b>Title:</b>
-		  <%= @product_sample.title %>
-		</p>
-		
-		<p>
-		  <b>Size:</b>
-		  <%= @product_sample.size %>
-		</p>
-		
-		<p>
-		  <b>Description:</b>
-		  <%= @product_sample.description %>
-		</p>
-		
-		<p>
-		  <b>Price:</b>
-		  <%= @product_sample.price %>
-		</p>
-		
-		<p>
-		  <b>Image</b>
-		  <%= image_tag @product_sample.image.url(:thumb) %>
-		  <%= image_tag @product_sample.image.url %>			
-		</p>
-		
-		<%= link_to 'Edit', edit_product_sample_path(@product_sample), :class => "btn btn-info" %> |
-		<%= link_to 'Back', product_samples_path, :class => "btn btn-inverse" %>
-		
-	</div>
-</div>
+<legend><%= @product_sample.title %></legend>
+
+<p>
+  <%= @product_sample.description %>
+</p>
+
+<p>
+  <b>Size:</b>
+  <%= @product_sample.size %>
+</p>		
+
+<p>
+  <b>Price:</b>
+  <%= @product_sample.price %>
+</p>
+
+<p>		  
+  <%= image_tag @product_sample.image.url, :class => "img-polaroid"%>		  			
+</p>
+
+<!-- If Admin then show below buttons -->
+
+<%= link_to 'Edit', edit_product_sample_path(@product_sample), :class => "btn btn-info" %> |
+<%= link_to 'Back', product_samples_path, :class => "btn btn-inverse" %>
