--- a/app/views/home/aboutus.html.erb
+++ b/app/views/home/aboutus.html.erb
@@ -1,4 +1,4 @@
-<% title "About Us" %>
+<%provide(:title, 'About Us')%>
 <% meta :description => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection",
         :keywords => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection, Free Quote, Low Price Handmade Embroidery, About Us"
 %>
