--- a/app/views/home/howwework.html.erb
+++ b/app/views/home/howwework.html.erb
@@ -1,4 +1,4 @@
-<% title "How to place order" %>
+<%provide(:title, 'How to place order')%>
 <% meta :description => "How to place order of Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection",
         :keywords => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection, Free Quote, Low Price Handmade Embroidery"
 %>
