--- a/app/views/home/pricing.html.erb
+++ b/app/views/home/pricing.html.erb
@@ -1,4 +1,4 @@
-<% title "Pricing" %>
+<%provide(:title, 'Pricing')%>
 <% meta :description => "Pricing of Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection",
         :keywords => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection, Free Quote, Low Price Handmade Embroidery"
 %>
