--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,10 +1,21 @@
 <div class="well sidebar-nav">
   <ul class="nav nav-list">
     <li class="nav-header" style="background-color: #171717; color: #999999">Our Work</li>
+    
     <% @products.each do |product| %>
-      <li class="<%= 'active' if params[:id] == product.id.to_s %>">	              
+      <li class="<%= 'active' if params[:id] == product.slug %>">	              
       	<%= link_to product.title, samples_path(product) %>
       </li>
+    <% end %>
+    
+    <% if !session[:recent_views].nil? %>
+    	<li class="nav-header" style="background-color: #171717; color: #999999">Recent Sample Views</li>
+    	<% session[:recent_views].each do |slug, title| %>
+    		<li class="<%= 'active' if params[:id] == slug %>">
+    			<%= link_to title, sample_url(slug) %>
+    		</li>
+    		
+    	<% end %>
     <% end %>
     
     <li class="nav-header" style="background-color: #171717; color: #999999">Project Name</li>
@@ -19,12 +30,19 @@
 	    <li class="<%= 'active' if params[:controller] == 'products' && params[:action] == 'index' %>">	              
       	<%= link_to "Manage Products", products_path %>
       </li>
+      <li class="<%= 'active' if params[:controller] == 'products' && params[:action] == 'new' %>">
+      	<%= link_to 'New Product', new_product_path %>
+      </li>
       <li class="<%= 'active' if params[:controller] == 'product_samples' && params[:action] == 'index' %>">	              
       	<%= link_to "Manage Product Samples", product_samples_path %>
+      </li>
+      <li class="<%= 'active' if params[:controller] == 'product_samples' && params[:action] == 'new' %>">
+      	<%= link_to "New Product Sample", new_product_sample_path %>
       </li>	    
       <li class="<%= 'active' if params[:controller] == 'quotes' && params[:action] == 'index' %>">	              
       	<%= link_to "Manage Quotes", quotes_path %>
       </li>
+      	
 	  <% end %>
   </ul>
 </div><!--/.well -->
