--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -13,3 +13,6 @@
   margin: -20px 0 0 -475px; /* CHANGE MARGINS TO ACCOMODATE THE NEW WIDTH (original = margin: -250px 0 0 -280px;) */
 }
 
+.thumbnailcustom {
+  min-height: 250px;    
+}
