--- a/app/views/home/contactus.html.erb
+++ b/app/views/home/contactus.html.erb
@@ -1,4 +1,4 @@
-<% title "Contact Us" %>
+<%provide(:title, 'Contact Us')%>
 <% meta :description => "Contact us for Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection",
         :keywords => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection, Free Quote, Low Price Handmade Embroidery"
 %>
