--- a/app/views/layouts/_carousel.html.erb
+++ b/app/views/layouts/_carousel.html.erb
@@ -9,8 +9,8 @@
               <h1>Embroidery Shop</h1>
               <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
               <!-- a class="btn btn-large btn-inverse" href="#">View Our Work</a -->
-              <%= link_to "How we Work", "home_url", :class => "btn btn-large btn-inverse"%>
-              <%= link_to "Free Quote", "home_url", :class => "btn btn-large btn-inverse"%>
+              <%= link_to "How we Work", howwework_url, :class => "btn btn-large btn-inverse"%>
+              <%= link_to "Free Quote", newquote_url, :class => "btn btn-large btn-inverse"%>
               <!-- a class="btn btn-large btn-inverse" href="#">Free Quote</a -->
             </div>
           </div>
@@ -22,9 +22,9 @@
 	          <div class="container">
 	            <div class="carousel-caption">
 	              <h1><%= product.title %></h1>
-	              <p class="lead"><%= product.description %></p>
-	              <a class="btn btn-large btn-inverse" href="#">Learn more</a>
-	              <a class="btn btn-large btn-inverse" href="#">Free Quote</a>
+	              <p class="lead"><%= product.description %></p>	              
+	              <%= link_to "View Samples", samples_path(product), :class => "btn btn-large btn-inverse"%>
+              	<%= link_to "Free Quote", newquote_url, :class => "btn btn-large btn-inverse"%>
 	            </div>
 	          </div>
 	        </div>
