--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>  
-  <%= title :site => "Embroidery Shop",
-            :separator => "-",
-            :reverse => true,
-            :default => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection" %>
+  <title><%= full_title(yield(:title)) %></title>
   <%= metamagic %>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
@@ -26,16 +23,17 @@
 			</div>
 			<div class="span9">
 				<div style="background-color: #F5F5F5; border-radius: 1px">
-				<div id="breadcrumb">
-			    <%= breadcrumbs :pretext => "Site Navigation:",
-			                   :separator => "&rsaquo;",
-			                   :autoroot => true,
-			                   :show_root_alone => false,
-			                   :link_last => false,
-			                   :semantic => true	                    
-			 		%>
+					<div id="breadcrumb">
+				    <%= breadcrumbs :pretext => "Site Navigation:",
+				                   :separator => "&rsaquo;",
+				                   :autoroot => true,
+				                   :show_root_alone => false,
+				                   :link_last => false,
+				                   :semantic => true	                    
+				 		%>
+					</div>
 				</div>
-				</div>
+				<%= render 'layouts/messages' %>
 				<%= yield %>						
 			</div>
 		</div>
