--- a/app/views/product_samples/edit.html.erb
+++ b/app/views/product_samples/edit.html.erb
@@ -1,7 +1,8 @@
-		<h1>Editing product_sample</h1>
-		
-		<%= render 'form' %>
-		
-		<%= link_to 'Show', @product_sample, :class => "btn btn-inverse" %> |
-		<%= link_to 'Back', product_samples_path, :class => "btn btn-info" %>
+<%provide(:title, 'Edit Product Sample')%>
+<h1>Editing product_sample</h1>
+
+<%= render 'form' %>
+
+<%= link_to 'Show', @product_sample, :class => "btn btn-inverse" %> |
+<%= link_to 'Back', product_samples_path, :class => "btn btn-info" %>
 		
