--- a/app/views/product_samples/index.html.erb
+++ b/app/views/product_samples/index.html.erb
@@ -1,3 +1,4 @@
+<%provide(:title, 'Product Samples')%>
 <h1>Product Samples</h1>
 
 <table width="100%" class="table table-striped table-bordered table-hover table-condensed">
