--- a/app/views/product_samples/show.html.erb
+++ b/app/views/product_samples/show.html.erb
@@ -1,4 +1,4 @@
-<% title @product_sample.title %>
+<%provide(:title, @product_sample.title)%>
 <% meta :description => @product_sample.description,
         :keywords => @product_sample.title
 %>
@@ -29,6 +29,7 @@
 </p>
 
 <!-- If Admin then show below buttons -->
-
-<%= link_to 'Edit', edit_product_sample_path(@product_sample), :class => "btn btn-info" %> |
-<%= link_to 'Back', product_samples_path, :class => "btn btn-inverse" %>
+<% if !session[:admin].nil? && session[:admin] == 'true' %>
+	<%= link_to 'Edit', edit_product_sample_path(@product_sample), :class => "btn btn-info" %> |
+	<%= link_to 'Back', product_samples_path, :class => "btn btn-inverse" %>
+<% end %>
