--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,3 +1,4 @@
+<%provide(:title, 'Products')%>
 <h1>Products</h1>
 
 <table width="100%" class="table table-striped table-bordered table-hover table-condensed">
