--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,3 +1,4 @@
+<%provide(:title, 'All Quotes')%>
 <h1>Quotes</h1>
 
 <table width="100%" class="table table-striped table-bordered table-hover table-condensed">
