--- a/app/views/quotes/new.html.erb
+++ b/app/views/quotes/new.html.erb
@@ -1,4 +1,5 @@
-<% title "Free Quote" %>
+<%provide(:title, 'Free Quote')%>
+
 <div>
 	<legend>Free Quote</legend>
 	Please fill the below form and click on the Submit button at the bottom of the page. We will get back to you in 24 hours. Fields in <strong>bold</strong> are mandatory.
