--- a/app/views/home/pricing.html.erb
+++ b/app/views/home/pricing.html.erb
@@ -2,4 +2,40 @@
 <% meta :description => "Pricing of Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection",
         :keywords => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection, Free Quote, Low Price Handmade Embroidery"
 %>
-<p>Pricing</p>
+<h3 style="margin-bottom: 0px">Pricing</h3>
+<hr style="margin-top: 2px"/>
+<p>
+	The decision to get a service shouldn't be a trade-off between quality and cost. At Embroidery Shop we believe in delivering unbeatable quality at unbeatable price. Please see below sections for pricing details.
+</p>
+
+<legend>Pricing Calculation</legend>
+<p>
+	We don't have any fixed formula for calculating price of a patch. Whenever we receive a sample design from our customer we get feedback from our production unit and then send the price quote to our customer. Following are the factors which impact pricing:
+	<ul>
+		<li>Sample Design Provided</li>
+		<li>Size of the Patch required</li>
+		<li>Quantity requested</li>
+		<li>Backing of the Patch</li>
+	</ul>
+	Please use <%= link_to "Free Quote", newquote_url%> to get an estimate for your patch. 
+</p>
+
+<legend>High Quality at Low Prices</legend>
+<p>
+	Please see our pricing attached to our sample work to get an idea of how lower our prices are. We've our own manufacturing unit that's why our pricing are lowest in market.
+</p>		  
+
+<legend>Free Desing Services</legend>
+<p>
+	We provide our customers free design services. We've been helping our customers to improve their existing design or suggest design from our experience.  
+</p>
+  
+<legend>Shipping</legend>
+<p>
+	Need information to update.
+</p>		  
+
+<legend>Backing of patch</legend>
+<p>
+	Normally there is no pricing attached with the backing of the patch, but if customer want a special backing for the patch then there might be some additional cost attached to that.
+</p>		  
