--- a/app/views/home/samples.html.erb
+++ b/app/views/home/samples.html.erb
@@ -3,20 +3,24 @@
         :keywords => @product.title
 %>
 <% breadcrumb :samples, @product %>
+
+<h3 style="margin-bottom: 0px"><%= @product.title %></h3>
+<hr style="margin-top: 2px; margin-bottom: 2px"/>
+<p><%= @product.description %></p>
 <ul class="thumbnails">
 <% @product_samples.each do |product_sample| %>
 	
 	  <li class="span3">
 	  	<div class="thumbnail">	  		
-	      <%= link_to image_tag(product_sample.image.url(:thumb)), sample_url(product_sample), {:remote => true, :class => 'thumbnail thumbnailcustom', 'data-toggle' => 'modal', 'data-target' => "#myModal", 'data-backdrop' => true, 'data-keyboard' => true} %>	      
+	      <%= link_to image_tag(product_sample.image.url(:thumb)), sample_url(@product, product_sample), {:remote => true, :class => 'thumbnail thumbnailcustom', 'data-toggle' => 'modal', 'data-target' => "#myModal", 'data-backdrop' => true, 'data-keyboard' => true} %>	      
 		    <div class="caption">
-          <h5><%= product_sample.title %></h5>
+          <h5 style="color: #0088CC"><%= product_sample.title %></h5>
           <p>Size: <%= product_sample.size %></p>
     	    <p>Price: <%= product_sample.price %></p>
           <p align="center">
             <!-- a href="#myModal<%=product_sample.id.to_s%>" class="btn btn-inverse btn-block" data-toggle="modal">View More information</a -->
             
-            <%= link_to "View Details", sample_url(product_sample), {:remote => true, :class => "btn btn-inverse btn-block", 'data-toggle' => 'modal', 'data-target' => "#myModal", 'data-backdrop' => true, 'data-keyboard' => true} %>
+            <%= link_to "View Details", sample_url(@product, product_sample), {:remote => true, :class => "btn btn-inverse btn-block", 'data-toggle' => 'modal', 'data-target' => "#myModal", 'data-backdrop' => true, 'data-keyboard' => true} %>
           </p>
         </div>
 	    </div>
