--- a/app/views/product_samples/_product_sample.html.erb
+++ b/app/views/product_samples/_product_sample.html.erb
@@ -16,7 +16,7 @@
 			    	<p><strong>Price: </strong><%=product_sample.price%></p>
 			    	<p align="center">
 		          <!-- a href="#" class="btn btn-inverse btn-block" data-toggle="modal">Free Quote</a -->
-		          <%= link_to "View Larger Image", sample_url(product_sample), :class => "btn btn-inverse btn-block"%>
+		          <%= link_to "View Larger Image", sample_url(product_sample.product.slug, product_sample), :class => "btn btn-inverse btn-block"%>
 		          <%= link_to "Free Quote", newquote_url, :class => "btn btn-inverse btn-block"%>
 		        </p>
 			    </div>						    	
