--- a/app/views/home/contactus.html.erb
+++ b/app/views/home/contactus.html.erb
@@ -2,4 +2,13 @@
 <% meta :description => "Contact us for Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection",
         :keywords => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection, Free Quote, Low Price Handmade Embroidery"
 %>
-<p>Contact Us</p>
+<h3 style="margin-bottom: 0px">Contact Us</h3>
+<hr style="margin-top: 2px"/>
+<address>
+  <strong>Embroidery Shop</strong><br>
+  000 Test Avenue<br>
+  Test City, NY 00000<br>
+  Phone: 000-000-0000<br>
+  Phone: (718)-000-0000<br>
+  <a href="mailto:#">first.last@example.com</a>
+</address>
