--- a/app/views/quotes/new.html.erb
+++ b/app/views/quotes/new.html.erb
@@ -1,8 +1,9 @@
 <%provide(:title, 'Free Quote')%>
 
-<div>
-	<legend>Free Quote</legend>
-	Please fill the below form and click on the Submit button at the bottom of the page. We will get back to you in 24 hours. Fields in <strong>bold</strong> are mandatory.
-</div>
+
+<h3 style="margin-bottom: 0px">Free Quote</h3>
+<hr style="margin-top: 2px"/>
+Please fill the below form and click on the Submit button at the bottom of the page. We will review your quote and get back to you in one business day. Fields in <strong>bold</strong> are mandatory.
+
 
 <%= render 'form' %>
