--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -10,6 +10,13 @@
   	<div class="span2">
 		</div>
   	<div class="span8" style="text-align: center">
+  		<% lastId = @products.last.id %>
+  		<% @products.each do |product| %>  				              
+      	<small><%= link_to product.title, samples_path(product) %></small>
+      	<% if product.id != lastId %>
+      		|
+      	<% end %>
+    	<% end %>
   		<p style="font-size: 10px; text-align: center">All the samples shown in the website are our previous work for our customers and these are sole property of our customers. These are shown here just give an overview to our prospective customers about our experience.</p>	
   		<p style="font-size: 10px; text-align: center">Pricing for each quote will be calculated at the time of request. Prices shown for samples were calculated at the time when they were manufactured so prices might be different than shown on website.</p>
 		</div>
