--- a/app/views/product_samples/index.html.erb
+++ b/app/views/product_samples/index.html.erb
@@ -24,7 +24,7 @@
     <td><%= product_sample.description %></td>
     <td><%= product_sample.price %></td>
     <td><%= image_tag product_sample.image.url(:thumb) %></td>
-    <td><%= link_to 'Show', sample_url(product_sample), :class => "btn btn-inverse" %></td>
+    <td><%= link_to 'Show', sample_url(product_sample.product, product_sample), :class => "btn btn-inverse" %></td>
     <td><%= link_to 'Edit', edit_product_sample_path(product_sample), :class => "btn btn-info" %></td>
     <td><%= link_to 'Destroy', product_sample, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-danger" %></td>
   </tr>
