--- a/app/assets/stylesheets/product_samples.css.scss
+++ b/app/assets/stylesheets/product_samples.css.scss
@@ -1,3 +1,23 @@
 // Place all the styles related to the product_samples controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+/*
+a.navImages{
+    position:absolute;
+    top:10px;
+    cursor:pointer;
+}
+#imagesDiv a#prev{
+    color:red;
+    left:10px; 
+
+}*/
+#imagesDiv a#next{
+    //right:40px;
+}
+#imagesDiv a#prev{
+    //margin-left: -27px;
+}
+#imagesDiv{
+   position:relative;
+}
