--- a/app/assets/stylesheets/product_samples.css.scss
+++ b/app/assets/stylesheets/product_samples.css.scss
@@ -13,10 +13,12 @@ a.navImages{
 
 }*/
 #imagesDiv a#next{
-    //right:40px;
+  color: #000;
+    //right:40px;    
 }
 #imagesDiv a#prev{
-    //margin-left: -27px;
+  color: #000;
+    //margin-left: -27px;    
 }
 #imagesDiv{
    position:relative;
