--- a/app/assets/stylesheets/product_samples.css.scss
+++ b/app/assets/stylesheets/product_samples.css.scss
@@ -13,11 +13,11 @@ a.navImages{
 
 }*/
 #imagesDiv a#next{
-  color: #000;
+  //color: #171717;
     //right:40px;    
 }
 #imagesDiv a#prev{
-  color: #000;
+  //color: #171717;
     //margin-left: -27px;    
 }
 #imagesDiv{
