--- a/app/views/home/contactus.html.erb
+++ b/app/views/home/contactus.html.erb
@@ -5,7 +5,7 @@
 <h3 style="margin-bottom: 0px">Contact Us</h3>
 <hr style="margin-top: 2px"/>
 <address>
-  <strong>Embroidery Shop</strong><br>
+  <strong>Emblem Embroiders</strong><br>
   000 Test Avenue<br>
   Test City, NY 00000<br>
   Phone: 000-000-0000<br>
