--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,10 +4,10 @@
 %>
 <div class="row">
 	<div class="span9" style="margin-bottom: 0px">
-		<h3 style="margin-bottom: 0px; margin-top: 0px">Embroidery Shop</h3>
+		<h3 style="margin-bottom: 0px; margin-top: 0px">Emblem Embroiders</h3>
 		<hr style="margin-top: 2px; margin-bottom: 0px"/>
 		<p>
-			Embroidery Shop has been providing superior quality services to customers for more than a decade. We’ve created logo and other patches for different companies, schools, corporations, country clubs, sporting clubs, Church embroidery, Christmas collection etc. Patches are embroidered using Gold and Silver bullion, Silk and threads of different colors. You can see sample of our work by clicking on Samples on top menu or click on any category on sidebar under Samples.  
+			Emblem Embroiders has been providing superior quality services to customers for more than a decade. We’ve created logo and other patches for different companies, schools, corporations, country clubs, sporting clubs, Church embroidery, Christmas collection etc. Patches are embroidered using Gold and Silver bullion, Silk and threads of different colors. You can see sample of our work by clicking on Samples on top menu or click on any category on sidebar under Samples.  
 		</p>
 		<p>
 			Please see below our services and feel free to call at 888-888-8888 for any question.
