--- a/app/views/home/pricing.html.erb
+++ b/app/views/home/pricing.html.erb
@@ -5,7 +5,7 @@
 <h3 style="margin-bottom: 0px">Pricing</h3>
 <hr style="margin-top: 2px"/>
 <p>
-	The decision to get a service shouldn't be a trade-off between quality and cost. At Embroidery Shop we believe in delivering unbeatable quality at unbeatable price. Please see below sections for pricing details.
+	The decision to get a service shouldn't be a trade-off between quality and cost. At Emblem Embroiders we believe in delivering unbeatable quality at unbeatable price. Please see below sections for pricing details.
 </p>
 
 <legend>Pricing Calculation</legend>
