--- a/app/views/home/privacypolicy.html.erb
+++ b/app/views/home/privacypolicy.html.erb
@@ -59,7 +59,7 @@
 
 <legend>Contact Us</legend>
 <address>
-  <strong>Embroidery Shop</strong><br>
+  <strong>Emblem Embroiders</strong><br>
   000 Test Avenue<br>
   Test City, NY 00000<br>
   Phone: 000-000-0000<br>
