--- a/app/views/home/aboutus.html.erb
+++ b/app/views/home/aboutus.html.erb
@@ -5,19 +5,19 @@
 <h3 style="margin-bottom: 0px">About Us</h3>
 <hr style="margin-top: 2px"/>
 <p>
-	Embroidery Shop has been providing superior quality services to customers for more than a decade. We’ve created logo and other patches for different companies, schools, corporations, country clubs, sporting clubs, Church embroidery, Christmas collection etc. Patches are embroidered using Gold and Silver bullion, Silk and threads of different colors. You can see sample of our work by clicking on Our Work on top menu or click on any category on sidebar.
+	Emblem Embroiders has been providing superior quality services to customers for more than a decade. We’ve created logo and other patches for different companies, schools, corporations, country clubs, sporting clubs, Church embroidery, Christmas collection etc. Patches are embroidered using Gold and Silver bullion, Silk and threads of different colors. You can see sample of our work by clicking on Our Work on top menu or click on any category on sidebar.
 </p>
 <legend>Mission Statement</legend>
 <p>
-	At Embroidery Shop we are committed in creating and maintaining a high standard of excellence in both our work and customer relations. Our goal is to understand each customer’s unique needs and craft the end product that is perfect match to customer's provided design.
+	At Emblem Embroiders we are committed in creating and maintaining a high standard of excellence in both our work and customer relations. Our goal is to understand each customer’s unique needs and craft the end product that is perfect match to customer's provided design.
 </p>
 
 <legend>Our Work and Experience</legend>
 <p>
-	Embroidery Shop has been providing superior quality service for over a decade. Each of our handcrafted embroidery piece is a masterpiece of distinction and grace. Our work reflects a classic elegance and the finishing of our products is both modern and meticulous.	
+	Emblem Embroiders has been providing superior quality service for over a decade. Each of our handcrafted embroidery piece is a masterpiece of distinction and grace. Our work reflects a classic elegance and the finishing of our products is both modern and meticulous.	
 </p>
 
 <legend>Our Pricing</legend>
 <p>
-	The decision to get a service shouldn't be a trade-off between quality and cost. At Embroidery Shop we believe in delivering unbeatable quality at unbeatable price. Please see prices attached to our samples to get an idea of our prices. Please visit <%= link_to "Pricing", pricing_url, :style => "text-decoration: underline"%> to see our pricing. 
+	The decision to get a service shouldn't be a trade-off between quality and cost. At Emblem Embroiders we believe in delivering unbeatable quality at unbeatable price. Please see prices attached to our samples to get an idea of our prices. Please visit <%= link_to "Pricing", pricing_url, :style => "text-decoration: underline"%> to see our pricing. 
 </p>
