--- a/app/views/home/products.html.erb
+++ b/app/views/home/products.html.erb
@@ -6,7 +6,7 @@
 <hr style="margin-top: 2px"/>
 
 <p>
-	Embroidery Shop has been providing superior quality services to our customers for more than a decade. Please see below samples pages to get an overview of expertise.  
+	Emblem Embroiders has been providing superior quality services to our customers for more than a decade. Please see below samples pages to get an overview of expertise.  
 </p>
 
 <% @products.each do |product| %>
