--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,7 @@
   <div class="row">
   	<div class="span12">
   		<small class="pull-right"><a href="#">Back to top</a></small>
-  		<small>&copy; Embroidery Shop 2013</small>	
+  		<small>&copy; Emblem Embroiders 2013</small>	
   	</div>
   </div>
   <div class="row">
