--- a/app/views/notifier/quote_received.text.erb
+++ b/app/views/notifier/quote_received.text.erb
@@ -3,4 +3,4 @@ Dear <%= @quote.name %>
 Thank you for your recent quote, we will review your quote and will get back to you in 24 hours.
 
 Regards,
-The Embroidery Shop
+Emblem Embroiders
