--- a/app/views/home/routing_error.html.erb
+++ b/app/views/home/routing_error.html.erb
@@ -1,5 +1,5 @@
 <%provide(:title, '404 Page Not Found')%>
-<% meta :description => "Pricing of Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection",
+<% meta :description => "Requested page is not found - 404",
         :keywords => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection, Free Quote, Low Price Handmade Embroidery"
 %>
 <legend>404 Page Not Found</legend>
