--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
-<%provide(:title, 'Home of Embroidered Products')%>
-<% meta :description => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection",
+<%provide(:title, 'Home of all types of Embroidered products')%>
+<% meta :description => "Emblem Embroiders provide embroidery services for Emblems, Crests, Coat of Arms, Bands and any type of custom patch. We offer free design services, please use our free quote tool to get started.",
         :keywords => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection, Free Quote, Low Price Handmade Embroidery"
 %>
 <div class="row">
