--- a/app/views/home/pricing.html.erb
+++ b/app/views/home/pricing.html.erb
@@ -1,5 +1,5 @@
 <%provide(:title, 'Pricing')%>
-<% meta :description => "Pricing of Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection",
+<% meta :description => "The decision to get a service shouldn't be a trade-off between quality and cost. At Emblem Embroiders we believe in delivering unbeatable quality at unbeatable price.",
         :keywords => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection, Free Quote, Low Price Handmade Embroidery"
 %>
 <h3 style="margin-bottom: 0px">Pricing</h3>
@@ -17,7 +17,7 @@
 		<li>Quantity requested</li>
 		<li>Backing of the Patch</li>
 	</ul>
-	Please use <%= link_to "Free Quote", newquote_url%> to get an estimate for your patch. 
+	Please use <%= link_to "Free Quote", newquote_url%> to get an estimate for your patch.
 </p>
 
 <legend>High Quality at Low Prices</legend>
@@ -30,12 +30,49 @@
 	We provide our customers free design services. We've been helping our customers to improve their existing design or suggest design from our experience.  
 </p>
   
-<legend>Shipping</legend>
-<p>
-	Need information to update.
-</p>		  
-
 <legend>Backing of patch</legend>
 <p>
 	Normally there is no pricing attached with the backing of the patch, but if customer want a special backing for the patch then there might be some additional cost attached to that.
-</p>		  
+</p>
+
+<legend>Hand Embroidered Bullion Crests and Emblems Pricing Table</legend>		  
+<p>Following table gives you an overview of our pricing for Hand Embroidered Bullion Crests. As mentioned above final quote will be provided after seeing the sample design. Following are estimated prices:</p>
+<table width="100%" class="table table-striped table-bordered table-hover table-condensed">
+	<thead>
+  <tr>
+    <th>Size/Quantity</th>
+    <th>10-25</th>
+    <th>26-50</th>
+    <th>51-75</th>
+    <th>76-100</th>
+    <th>100+</th>
+  </tr>
+	</thead>
+	<tbody>
+	  <tr>
+	    <td>3" x 3"</td>
+	    <td>$8.00</td>
+	    <td>$7.75</td>
+	    <td>$7.50</td>
+	    <td>$7.25</td>
+	    <td>$7.00</td>	    
+	  </tr>
+	  <tr>
+	    <td>4" x 4"</td>
+	    <td>$10.00</td>
+	    <td>$10.75</td>
+	    <td>$10.50</td>
+	    <td>$10.25</td>
+	    <td>$9.00</td>	    
+	  </tr>
+	  <tr>
+	    <td>5" x 5"</td>
+	    <td>$12.00</td>
+	    <td>$12.75</td>
+	    <td>$12.50</td>
+	    <td>$12.25</td>
+	    <td>$11.00</td>	    
+	  </tr>
+	</tbody>
+</table>
+
