--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -89,19 +89,21 @@
       margin-top: 0;
       //font-size: 120px;
       //text-shadow: 0 1px 1px rgba(0,0,0,.4);
-      //background-color: transparent;
+      background-color: transparent;
       //border: 0;
       z-index: 10;
     }
 
     .carousel .item {
       height: 350px;
+      background-color: #171717;
     }
     .carousel img {
       position: absolute;
       top: 0;
       left: 0;
-      min-width: 100%;
+      min-width: 50%;
+      max-width: 50%;
       height: 350px;
     }
 
@@ -110,14 +112,15 @@
       position: static;
       max-width: 550px;
       padding: 0 20px;
-      margin-top: 100px;
-      margin-left: 60px;
+      margin-top: 80px;
+      margin-left: 50%;
+      color: #0088CC;
     }
     .carousel-caption h2,
     .carousel-caption .lead {
       margin: 0;
       line-height: 1.25;
-      color: #fff;
+      //color: #fff;
       text-shadow: 1px 5px 5px #000;
     }
     .carousel-caption .btn {
@@ -189,11 +192,11 @@
       }
 
       .carousel .item {
-        height: 500px;
+        height: 350px;
       }
       .carousel img {
         width: auto;
-        height: 500px;
+        height: 350px;
       }
 
       .featurette {
