updated lead color

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -124,7 +124,7 @@
       text-shadow: 1px 5px 5px #000;
     }
     .carousel-caption .lead {
-      color: #999999;
+      color: #E4E4E4;
     }
     
     
