--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -114,6 +114,7 @@
       padding: 0 20px;
       margin-top: 80px;
       margin-left: 50%;
+      margin-right: 30px;
       color: #0088CC;
     }
     .carousel-caption h2,
