--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -89,7 +89,7 @@
       margin-top: 0;
       //font-size: 120px;
       //text-shadow: 0 1px 1px rgba(0,0,0,.4);
-      background-color: transparent;
+      background-color: #000;
       //border: 0;
       z-index: 10;
     }
