--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -20,6 +20,10 @@
     <%= f.text_field :size %>
   </div>
   <div class="field">
+    <%= f.label "Sort Index" %><br />
+    <%= f.text_field :sort_index %>
+  </div>
+  <div class="field">
     <%= f.label :description %><br />
     <%= f.text_area :description %>
   </div>
