--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,6 +6,7 @@
   <tr>
     <th>Title</th>
     <th>Size</th>
+    <th>Sort Index</th>
     <th>Description</th>
     <th>Image</th>
     <th>View</th>
@@ -18,6 +19,7 @@
   <tr>
     <td><%= product.title %></td>
     <td><%= product.size %></td>
+    <td><%= product.sort_index %></td>
     <td><%= product.description %></td>
     <td><%= image_tag product.image.url %></td>
     <td><%= link_to 'Show', product, :class => "btn btn-inverse" %></td>
