--- a/app/views/layouts/_carousel.html.erb
+++ b/app/views/layouts/_carousel.html.erb
@@ -16,7 +16,9 @@
           <%= image_tag "Header.jpg", :class => "img-rounded"%>
           <div class="container">
             <div class="carousel-caption">
-              <h2>Emblem Embroiders</h2>
+            	<h2>
+              	<%= link_to "Emblem Embroiders", productsamples_url %>
+              </h2>
               <p class="lead">Home of Embroidered Emblems, Crests, Coat of Arms, Religious Embroidery</p>
               <!-- a class="btn btn-large btn-inverse" href="#">View Our Work</a -->
               <%= link_to "View Samples", productsamples_url, :class => "btn btn-large btn-inverse"%>
@@ -31,7 +33,9 @@
 	          <%= image_tag product.image.url %>
 	          <div class="container">
 	            <div class="carousel-caption">
-	              <h2><%= product.title %></h2>
+	              <h2>
+	              	<%= link_to product.title, samples_path(product) %>
+	              </h2>
 	              <p class="lead"><%= product.description %></p>	              
 	              <%= link_to "View Samples", samples_path(product), :class => "btn btn-large btn-inverse"%>
               	<%= link_to "Free Quote", newquote_url, :class => "btn btn-large btn-inverse"%>
