--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -10,7 +10,13 @@
 
 .mymodal {
   width: 950px; /* SET THE WIDTH OF THE MODAL */
+ max-height: 700px;
   margin: -20px 0 0 -475px; /* CHANGE MARGINS TO ACCOMODATE THE NEW WIDTH (original = margin: -250px 0 0 -280px;) */
+}
+
+.imageheight {
+  max-height: 600px;
+  
 }
 
 .thumbnailcustom {
@@ -19,4 +25,9 @@
 
 .customheight {
   min-height: 85px;
+}
+
+.productthumbnail {
+ max-height: 350px;
+ max-width: 100%; 
 }
