--- a/app/views/home/products.html.erb
+++ b/app/views/home/products.html.erb
@@ -13,7 +13,7 @@
 	<a href=<%= samples_path(product)%>><legend><%= product.title %></legend></a>
 	<p><%= product.description %></p>
 	<p>		  
-	  <%= link_to image_tag(product.image.url, :class => "img-polaroid"), samples_path(product) %>		  			
+	  <%= link_to image_tag(product.image.url, :class => "img-polaroid productthumbnail"), samples_path(product) %>		  			
 	</p>
 <% end %>
 <%= will_paginate @products %>
