--- a/app/views/home/contactus.html.erb
+++ b/app/views/home/contactus.html.erb
@@ -4,11 +4,11 @@
 %>
 <h3 style="margin-bottom: 0px">Contact Us</h3>
 <hr style="margin-top: 2px"/>
+<p>Please feel free to call at 800-837-5053 or drop an email at info@emblemembroiders.com for any question.</p>
 <address>
-  <strong>Emblem Embroiders</strong><br>
-  000 Test Avenue<br>
-  Test City, NY 00000<br>
-  Phone: 000-000-0000<br>
-  Phone: (718)-000-0000<br>
-  <a href="mailto:#">first.last@example.com</a>
+  <strong>Emblem Embroiders Inc</strong><br>
+  1048 Franklin Ave<br>
+  Bronx, NY 10456<br>
+  Phone: 800-837-5053<br>
+  <a href="mailto:info@emblemembroiders.com">info@emblemembroiders.com</a>
 </address>
