--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,7 @@
 			Emblem Embroiders has been providing superior quality services to customers for more than a decade. We’ve created logo and other patches for different companies, schools, corporations, country clubs, sporting clubs, Church embroidery, Christmas collection etc. Patches are embroidered using Gold and Silver bullion, Silk and threads of different colors. You can see sample of our work by clicking on Samples on top menu or click on any category on sidebar under Samples.  
 		</p>
 		<p>
-			Please see below our services and feel free to call at 888-888-8888 for any question.
+			Please see below our services and feel free to call at 800-837-5053 or drop an email at <a href="mailto:info@emblemembroiders.com">info@emblemembroiders.com</a> for any question.
 		</p>
 	</div>
 	<div class="span5">		
