--- a/app/views/layouts/_carousel.html.erb
+++ b/app/views/layouts/_carousel.html.erb
@@ -13,13 +13,13 @@
 		  </ol>
       <div class="carousel-inner">
         <div class="item active">
-          <%= image_tag "Header.jpg", :class => "img-rounded"%>
+          <%= image_tag "header.png", :class => "img-rounded"%>
           <div class="container">
             <div class="carousel-caption">
             	<h2>
               	<%= link_to "Emblem Embroiders", productsamples_url %>
               </h2>
-              <p class="lead">Home of Embroidered Emblems, Crests, Coat of Arms, Religious Embroidery</p>
+              <p class="lead">Home of Embroidered Emblems, Crests, Coat of Arms, Church Embroidery</p>
               <!-- a class="btn btn-large btn-inverse" href="#">View Our Work</a -->
               <%= link_to "View Samples", productsamples_url, :class => "btn btn-large btn-inverse"%>
               <%= link_to "Free Quote", newquote_url, :class => "btn btn-large btn-inverse"%>
