--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -23,7 +23,7 @@
                 <li class="<%= 'active' if params[:action] == 'contactus' %>"><%= link_to "Contact Us", contactus_url %></li>
                 <li class="<%= 'active' if params[:action] == 'howwework' %>"><%= link_to "How To Place Order", howwework_url %></li>
                 <li class="<%= 'active' if params[:action] == 'new' && params[:controller] == 'quotes' %>"><%= link_to "Free Quote", newquote_url %></li>
-                <li class="<%= 'active' if params[:action] == 'faqs' %>"><%= link_to "FAQs", faqs_url %></li>
+                
                 
                 <!-- Read about Bootstrap dropdowns at http://twitter.github.com/bootstrap/javascript.html#dropdowns -->
                 <!-- li class="dropdown">
@@ -40,6 +40,7 @@
                 </li -->
               </ul>
             </div><!--/.nav-collapse -->
+            <p class="brand">800-837-5053</p>
           </div><!-- /.navbar-inner -->
         </div><!-- /.navbar -->
 
