--- a/app/views/layouts/_carousel.html.erb
+++ b/app/views/layouts/_carousel.html.erb
@@ -19,7 +19,8 @@
             	<h2>
               	<%= link_to "Emblem Embroiders", productsamples_url %>
               </h2>
-              <p class="lead">Home of Embroidered Emblems, Crests, Coat of Arms, Church Embroidery</p>
+              <p class="lead">Home of Embroidered Emblems, Crests, Coat of Arms, Church Embroidery.</p>
+              <p class="lead">Please click on Free Quote to submit a free quote or contact us at 800-837-5053</p>
               <!-- a class="btn btn-large btn-inverse" href="#">View Our Work</a -->
               <%= link_to "View Samples", productsamples_url, :class => "btn btn-large btn-inverse"%>
               <%= link_to "Free Quote", newquote_url, :class => "btn btn-large btn-inverse"%>
