--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -36,7 +36,7 @@
 	  </p>
 	  <legend>Pricing Calculation</legend>
 	  <p>
-	  	Pricing for each design is calculated on the basis of sample provided and quantity selected, please review <%= link_to "Pricing", newquote_url %> page for details.
+	  	Pricing for each design is calculated on the basis of sample provided and quantity selected, please review <%= link_to "Pricing", pricing_url %> page for details.
 	  </p>
 	</div>
 </div>
